--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,43 @@
-div {
-    background-color:red;
+body {
+    background-color: aqua;
+    font-size: 24pt;
 }
 
 h1 {
-    color:blue;
+    text-align: center;
+}
+
+h1.main {
+    position: absolute;
+    transition: 1s;
+    opacity: 0;
+}
+
+div.main {
+    position: absolute;
+    transition: 1s;
+    opacity: 100;
+}
+
+div.end {
+    position:relative;
+}
+
+span.stress {
+    display: inline;
+    color: #d42a0c;
+    font-size: 30pt;
+    font-weight: bold;
+}
+
+img.cont {
+    width: 150px;
+    height: 150px;
+    opacity: 0;
+}
+
+img.inline {
+    width: 50px;
+    height: 50px;
+    opacity: 0;
 }
