--- a/css/main.css
+++ b/css/main.css
@@ -58,14 +58,19 @@ span.stress {
     font-weight: bold;
 }
 
-img.cont {
-    width: 150px;
-    height: 150px;
+img {
+    position: absolute;
     opacity: 0;
 }
 
+img.cont {
+    display: block;
+    width: 120px;
+    height: 120px;
+}
+
 img.inline {
+    display: inline;
     width: 50px;
     height: 50px;
-    opacity: 0;
 }
